--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
     <a href="/" class="lang-logo">
       <img src="/lang-logo.png">
     </a>
-    <h1>instagram-analytics-spring</h1>
+    <h1>cs8803-mas</h1>
     <p>Sample application testing some apis.</p>
     <a type="button" class="btn btn-lg btn-default" href="/db"><span class="glyphicon glyphicon-flash"></span> Database Page</a>
   </div>
