--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -14,7 +14,7 @@
                     <a href="/"><span class="glyphicon glyphicon-home"></span> Home</a>
                 </li>
                 <li>
-                    <a href="/hello"><span class="glyphicon glyphicon-user"></span> HelloPage</a>
+                    <a href="/db"><span class="glyphicon glyphicon-user"></span> DBPage</a>
                 </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-info-sign"></span> Endpoints <span class="caret"></span></a>
